[workspace]
resolver = "2"

members = [
    "pbyk", "pbykcorelib",
    "pbyklib",
]

[profile.bench]
debug = true

[profile.release]
debug = true

[patch.crates-io]
x509-cert  = { git = "https://github.com/RustCrypto/formats.git" }
spki       = { git = "https://github.com/RustCrypto/formats.git" }

cms        = { git = "https://github.com/RustCrypto/formats.git" }
der        = { git = "https://github.com/RustCrypto/formats.git" }
der_derive = { git = "https://github.com/RustCrypto/formats.git" }
x509-ocsp  = { git = "https://github.com/RustCrypto/formats.git" }

primefield = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p256       = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p384       = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p521       = { git = "https://github.com/RustCrypto/elliptic-curves.git" }

sha1         = { git = "https://github.com/RustCrypto/hashes.git" }
sha2         = { git = "https://github.com/RustCrypto/hashes.git" }

pkcs1 = { git = "https://github.com/RustCrypto/formats.git" }

curve25519-dalek = { git = "https://github.com/baloo/curve25519-dalek.git", branch = "baloo/rand-0.9" }
ed25519-dalek    = { git = "https://github.com/baloo/curve25519-dalek.git", branch = "baloo/rand-0.9" }

