[workspace]
resolver = "2"

members = [
    "pbyk", "pbykcorelib",
    "pbyklib",
]

[profile.bench]
debug = true

[profile.release]
debug = true

[patch.crates-io]
cms       = { git = "https://github.com/RustCrypto/formats.git" }
pkcs12    = { git = "https://github.com/RustCrypto/formats.git" }
x509-ocsp = { git = "https://github.com/RustCrypto/formats.git" }

keccak    = { git = "https://github.com/RustCrypto/sponges.git" }
sha3      = { git = "https://github.com/RustCrypto/hashes.git" }