[package]
name = "pbyk"
version = "0.4.0-pre.0"
edition = "2021"
rust-version = "1.80.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbyklib = {path = "../pbyklib"}

clap = {version = "4.5.23", features=["std", "derive"]}
colored = "2.2.0"
log = "0.4.20"
log4rs = {version = "1.3.0"}
rpassword = "7.3.1"
tokio = { version = "1.42.0", features = ["full", "time", "rt-multi-thread"]}
# the yubikey fork features a length check needed when pbyk is run in presence of some middleware. use fork until upstream is updated with length check added to form.
#yubikey = { version = "0.8.0", features = ["untested"] }
yubikey = {git = "https://github.com/carl-wallace/yubikey.rs.git", branch = "pbyk", features = ["untested"]}
zeroize = "1.8.1"

dioxus = {version = "0.6.1", optional = true}
dioxus-desktop = {version = "0.6.1", optional = true}
native-dialog = { version = "0.7.0", optional = true }

# Use fork until upstream is updated. This bumps the project to dioxus 0.4.0. See https://github.com/mrxiaozhuox/dioxus-toast/pull/3.
dioxus-toast = { git = "https://github.com/carl-wallace/dioxus-toast", optional = true, branch = "main" }

cfg-if = "1.0.0"
home = {version = "0.5.11", optional = true}
anyhow = {version = "1.0.95", optional = true}

serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = "1.0.134"

base64ct = { version="1.6.0", features = ["alloc"] }

# certval has not yet been released, hence use of private branch
certval = { git = "https://github.com/carl-wallace/rust-pki.git", features = ["std"]}
futures = { version = "0.3.31", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3.9", features = ["wincon", "winuser"]}

[features]
default = ["dev"]
dev = ["pbyklib/dev"]
om_nipr = ["pbyklib/om_nipr"]
om_sipr = ["pbyklib/om_sipr"]
nipr = ["pbyklib/nipr"]
sipr = ["pbyklib/sipr"]
gui = ["home", "anyhow", "dioxus-desktop", "dioxus", "dioxus-toast", "native-dialog", "futures"]
vsc = ["pbyklib/vsc", "reset_vsc"]
reset_vsc = ["pbyklib/reset_vsc"] # this feature exists to quarantine non-functional VSC reset code. do not use.