[package]
name = "pbyk"
version = "0.4.2"
edition = "2024"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbyklib = {path = "../pbyklib"}

clap = {version = "4.6.2", features=["std", "derive"]}
colored = "3.1.1"
log = "0.4.33"
log4rs = {version = "1.4.0"}
rpassword = "7.5.4"
tokio = { version = "1.52.4", features = ["full", "time", "rt-multi-thread"]}
# the yubikey fork features a length check needed when pbyk is run in presence of some middleware. use fork until upstream is updated with length check added to form.
#yubikey = { version = "0.8.0", features = ["untested"] }
yubikey = {git = "https://github.com/carl-wallace/yubikey.rs.git", branch = "updates", features = ["untested"]}
zeroize = "1.9.0"

dioxus = {version = "0.6.3", optional = true}
dioxus-desktop = {version = "0.6.3", optional = true}

dioxus-toast = { version = "0.6", optional = true }

cfg-if = "1.0.4"
home = {version = "0.5.12", optional = true}
anyhow = {version = "1.0.103", optional = true}

serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.150"

base64ct = { version="1.8.3", features = ["alloc"] }

# certval has not yet been released, hence use of private branch
certval = { git = "https://github.com/carl-wallace/rust-pki.git", features = ["std", "rsa"], branch = "main"}
futures = { version = "0.3.32", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3.9", features = ["wincon", "winuser"]}

[features]
default = ["dev"]
dev = ["pbyklib/dev"]
om_nipr = ["pbyklib/om_nipr"]
om_sipr = ["pbyklib/om_sipr"]
nipr = ["pbyklib/nipr"]
sipr = ["pbyklib/sipr"]
gui = ["home", "anyhow", "dioxus-desktop", "dioxus", "dioxus-toast", "futures"]
vsc = ["pbyklib/vsc", "reset_vsc"]
reset_vsc = ["pbyklib/reset_vsc"] # this feature exists to quarantine non-functional VSC reset code. do not use.
test_pin = [] # adds PBYK_PIN / PBYK_PUK env vars to bypass interactive PIN/PUK prompts. test/scripting only — do not ship.
legacy_p12 = ["pbyklib/legacy_p12"] # accept legacy (RC2/3DES/SHA-1) PKCS #12 encryption; portal P12s are modern, off by default
