[package]
name = "pbykcorelib"
version = "0.2.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
base64ct = { version="1.8.0", features = ["alloc"] }
cms = { version = "0.3.0-pre.0", features = ["builder"] }
const-oid = { version = "0.10.1", features = ["db"] }
der = { version = "0.8.0-rc.6", features = ["alloc", "derive", "oid", "pem"] }
spki = "0.8.0-rc.3"
x509-cert = "0.3.0-rc.0"

# certval has not yet been released, hence use of private branch
certval = { git = "https://github.com/carl-wallace/rust-pki.git", features = ["std", "rsa"], branch = "cert_limbo"}

rsa = { version = "0.10.0-rc.1", features = ["sha2"] }
sha2 = "0.11.0-rc.0"
signature = { version = "3.0.0-rc.2", features = ["digest", "alloc"]}

log = "0.4.27"
plist = "1.7.1"
reqwest = {version = "0.12.22", features = ["rustls-tls", "multipart", "blocking"]}
serde_json = "1.0.140"
subtle-encoding = "0.5.1"

pb_pki = {git="https://github.com/carl-wallace/pb_pki.git", branch = "updates"}
rand_core = { version = "0.9.3" , features = ["os_rng"]}
rand = "0.9"

[features]
default = ["dev"]
dev = ["pb_pki/dev"]
om_nipr = ["pb_pki/om_nipr"]
om_sipr = ["pb_pki/om_sipr"]
nipr = ["pb_pki/nipr"]
sipr = ["pb_pki/sipr"]