[package]
name = "pbyklib"
version = "0.4.2"
edition = "2024"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbykcorelib = {path = "../pbykcorelib"}

base64ct = { version="1.8.3", features = ["alloc"] }
# EnvelopedDataBuilder is not yet released, hence use of private branch
cms = {version = "0.3.0-pre.2"}
pkcs12_builder = {git = "https://github.com/carl-wallace/pkcs12_builder", features = ["legacy"]}
const-oid = { version = "0.10.2", features = ["db"] }
der = { version = "0.8.1", features = ["alloc", "derive", "oid", "pem"] }
spki = "0.8.0"
x509-cert = "0.3.0"

# certval has not yet been released, hence use of private branch
certval = { git = "https://github.com/carl-wallace/rust-pki.git", features = ["std", "rsa"], branch = "main"}

aes = { version = "0.9.1", features = ["zeroize"] }
cipher = { version = "0.5.2", features = ["rand_core"] }
cbc = "0.2.1"
pkcs1 = "0.8.0-rc.4"
rsa = { version = "0.10.0-rc.18", features = ["sha2"] }
sha1 = {version = "0.11.0", default-features = false}
sha2 = "0.11.0"
signature = { version = "3.0.0", features = ["digest", "alloc"]}

home = "0.5.12"
log = "0.4.33"
plist = "1.10.0"
rand = "0.10.2"
rand_core = { version = "0.10.1"}

reqwest = {version = "0.13.4", default-features = false, features = ["rustls", "multipart", "blocking"]}
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.150"
subtle = { version = "2.6.1", default-features = false }
tokio = { version = "1.52.4", features = ["full", "time", "rt-multi-thread"]}
uuid = { version = "1.24.0", features = ["v4"] }
# the yubikey fork features a length check needed when pbyk is run in presence of some middleware. use fork until upstream is updated with length check added to form.
#yubikey = { version = "0.8.0", features = ["untested"] }
yubikey = {git = "https://github.com/carl-wallace/yubikey.rs.git", branch = "updates", features = ["untested"]}
zeroize = "1.9.0"

pkcs8 = "0.11.0"

pb_pki = {git="https://github.com/carl-wallace/pb_pki.git", branch = "main"}

[dev-dependencies]
hex-literal = "1.1.0"
log4rs = "1.4.0"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.61.3", features = [
    "Devices_Enumeration", "Devices_SmartCards", "Foundation_Collections", 
    "Security_Cryptography", "Security_Cryptography_Certificates", "Security_Cryptography_Core", "Security_ExchangeActiveSyncProvisioning",
    "Storage_Streams", "System_Profile",
    "Win32_Foundation", "Win32_Security", "Win32_Security_Cryptography"] }

[features]
default = ["dev"]
dev = ["pb_pki/dev"]
om_nipr = ["pb_pki/om_nipr"]
om_sipr = ["pb_pki/om_sipr"]
nipr = ["pb_pki/nipr"]
sipr = ["pb_pki/sipr"]
vsc = []
reset_vsc = [] # this feature exists to quarantine non-functional VSC reset code. do not use.
